manifest/objects/Provider_Prices__c.object
<CustomObject>
    <fields>
        <fullName>Copado_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Copado External Id</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Maximum_Points__c</fullName>
        <label>Maximum Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Points__c</fullName>
        <label>Minimum Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Provider__c</fullName>
        <label>Price Provider</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Provider Prices</relationshipLabel>
        <relationshipName>Provider_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provider_Type__c</fullName>
        <label>Provider Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IDN</fullName>
                </value>
                <value>
                    <fullName>Non-IDN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Provider Prices</label>
    <listViews>
        <fullName>ALL_Provider</fullName>
        <columns>NAME</columns>
        <columns>Price_Provider__c</columns>
        <columns>Product__c</columns>
        <columns>Product_Code__c</columns>
        <columns>Provider_Type__c</columns>
        <columns>Minimum_Points__c</columns>
        <columns>Maximum_Points__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>ALL Provider</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Code__c</columns>
        <columns>Minimum_Points__c</columns>
        <columns>Maximum_Points__c</columns>
        <columns>Price_Provider__c</columns>
        <columns>Provider_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PROP-{0000}</displayFormat>
        <label>Provider Prices Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provider Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>